Fixed .container padding being too tall on tablet upwards

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ margin-right: 5px;
 	width: 960px;
 	max-width: 100%;
 	height: 700px;
-	padding-top: 5em;
+	padding-top: 0;
 	position: relative;
 }
 
